// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly display message for multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    30
     
    expenses
     totalling 
    $230,987.25
  </p>
</div>
`;

exports[`should correctly display message for one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </p>
</div>
`;
